[package]
name = "eth_blobs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-sink-kv = "0.1.3"
substreams-database-change = "1.3.0"
substreams-entity-change = { path = "../../../StreamingFast/substreams-sink-entity-changes/substreams-entity-change" }

[build-dependencies]
